--- a/TPC_GROSS_LAINO_CHAPARRO/Site.Master
+++ b/TPC_GROSS_LAINO_CHAPARRO/Site.Master
@@ -14,7 +14,7 @@
     </asp:PlaceHolder>
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="img/favicon-oil.png" rel="shortcut icon" type="image/x-icon" />
     <link href="css/estilos.css" rel="stylesheet" />
 
 </head>
