--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -141,3 +141,243 @@
         width: 80%;
     }
 }
+
+/*____________________________________________________________________________________________________*/
+
+.lbl-detalle {
+    font-size: 25px;
+}
+
+@media screen and (max-width: 480px) {
+    .lbl-detalle {
+        font-size: 1.2rem;
+    }
+}
+
+.txt-detalle {
+    font-size: 25px;
+    text-align: left !important;
+}
+
+@media screen and (max-width: 480px) {
+    .txt-detalle {
+        font-size: 1.2rem;
+    }
+}
+
+.div-detalle {
+    width: 60%;
+    text-align: left !important;
+    margin-top: 30px;
+}
+
+@media screen and (max-width: 480px) {
+    .div-detalle {
+        margin-left: 10px;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+.principal-detalle {
+    display: grid;
+    border: 1px solid #000000;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 10px 0px #000000;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width: 480px) {
+    .principal-detalle {
+        grid-template-columns: 1fr;
+    }
+}
+
+.img-detalle {
+    width: 400px;
+    margin-left: 30px;
+}
+
+@media screen and (max-width: 480px) {
+    .img-detalle {
+        width: 80%;
+    }
+}
+
+.btn-cards-carrito {
+    background-color: orange !important;
+    border: 1px solid orange !important;
+    right: 0;
+}
+
+    .btn-cards-carrito:hover {
+        background-color: #FFFFFF !important;
+        color: orange !important;
+        border: 1px solid orange !important;
+    }
+
+.btn-cards-carrito-2:hover {
+    background-color: #FFFFFF !important;
+    color: #007bff !important;
+    border: 1px solid #007bff !important;
+}
+
+.btn-primary {
+    display: flex !important;
+    margin-bottom: 10px !important;
+}
+
+.img-cards {
+    width: 150px !important;
+}
+
+.stl-card {
+    box-shadow: 0px 0px 10px 0px grey;
+    padding-top: 15px;
+}
+
+.bg-dark {
+    box-shadow: 0px 0px 10px 0px #000000 !important;
+}
+
+.btn-buscador {
+    background-color: #007bff;
+    color: #FFFFFF;
+    border: 2px solid darkgrey;
+    box-shadow: 2px 2px 6px 0px #000000;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-bottom: 30px;
+}
+
+    .btn-buscador:hover {
+        background-color: #FFFFFF;
+        color: #007bff;
+        font-weight: 400;
+    }
+
+.txt-buscador {
+    width: 350px;
+}
+
+@media screen and (max-width: 480px) {
+    .txt-buscador {
+        width: 200px;
+    }
+}
+
+.btn-carrito {
+    background-color: #007bff;
+    color: #FFFFFF;
+    border: 2px solid darkgrey;
+    box-shadow: 2px 2px 6px 0px #000000;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    width: 300px;
+}
+
+    .btn-carrito:hover {
+        background-color: #FFFFFF;
+        color: #007bff;
+        font-weight: 500;
+    }
+
+.txt-carrito {
+    font-size: 20px;
+    font-family: monospace;
+    font-weight: 600;
+}
+
+.img-carrito {
+    padding-right: 40px;
+    padding-bottom: 30px;
+}
+
+.nom-carrito {
+    width: 350px;
+}
+
+.imp-carrito {
+    width: 130px;
+}
+
+.btn-carrito-eliminar {
+    background-color: #007bff;
+    color: #FFFFFF;
+}
+
+    .btn-carrito-eliminar:hover {
+        border: 2px solid #007bff !important;
+        background-color: #FFFFFF !important;
+        color: #007bff !important;
+    }
+
+.cont-correcto {
+    width: 80%;
+    box-shadow: 0px 0px 10px 0px #000000;
+    border-radius: 30px;
+    padding: 30px;
+    background-color: #1BEE2F;
+    margin-top: 100px;
+    margin-bottom: 200px;
+}
+
+.btn-cont-inicio {
+    background-color: #007bff;
+    color: #FFFFFF;
+    border: 2px solid darkgrey;
+    box-shadow: 2px 2px 6px 0px #000000;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    width: 120px;
+    margin-right: 60px;
+}
+
+@media screen and (max-width: 480px) {
+    .btn-cont-inicio {
+        margin-right: 0px;
+    }
+}
+
+.btn-cont-inicio:hover {
+    background-color: #FFFFFF;
+    color: #007bff;
+    font-weight: 500;
+}
+
+
+.btn-cont-carrito {
+    background-color: #715A16;
+    color: #FFFFFF;
+    border: 2px solid darkgrey;
+    box-shadow: 2px 2px 6px 0px #000000;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    width: 120px;
+}
+
+    .btn-cont-carrito:hover {
+        background-color: #FFFFFF;
+        color: #715A16;
+        font-weight: 500;
+    }
+
+.txt-correcto-1 {
+    font-family: serif;
+    font-weight: 600;
+}
+
+.txt-correcto-2 {
+    font-family: serif;
+    font-weight: 500;
+}
