--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -21,7 +21,6 @@
 }
 
 .nom-stl {
-    margin-top: 50px;
     text-align: center;
     font-size: calc(3em + 1vw);
     color: #142382;
@@ -151,11 +150,13 @@
 .img-cards {
     max-width: 170px !important;
     margin-top: 30px !important;
+    z-index: 1;
 }
 
 .stl-card {
     box-shadow: 0px 0px 10px 0px grey;
     padding-top: 15px;
+    z-index: 1;
 }
 
 .bg-dark {
@@ -188,11 +189,12 @@
     }
 }
 
-.navbar{
+.navbar {
     position: fixed !important;
     left: 0;
     top: 0;
     right: 0;
+    z-index: 20;
 }
 
 .body-content{
@@ -227,4 +229,20 @@
     color: black;
     font-weight: bold;
     border-radius: 10px;
+}
+
+.container{
+    z-index: 1;
+}
+
+.stl-catalogo{
+    z-index: 1;
+}
+
+.row-cols-md-3{
+    z-index: 1;
+}
+
+.card-body{
+    z-index: 1;
 }
