--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -276,7 +276,7 @@
     left: 270px;
 }
 
-.img-btn-edit-tipo-producto {
+.img-btn-edit-abm-prod-tipo-producto {
     position: relative;
     top: -110px;
     left: 541px;
@@ -443,4 +443,45 @@
     top: -500px;
     left: -63px;
     text-align: center;
+}
+
+.img-btn-del-tipo-producto {
+    width: 30px;
+    vertical-align: bottom;
+}
+
+.img-btn-del-tipo-producto:hover {
+    border-radius: 100px;
+    box-shadow: 0 0 10px black;
+}
+
+.img-btn-edit-tipo-producto {
+    width: 27px;
+    vertical-align: text-top;
+    position: relative;
+    top: -4px;
+    left: 69px;
+}
+
+    .img-btn-edit-tipo-producto:hover {
+        box-shadow: 0 0 10px black;
+        background-color: black;
+    }
+
+.dgv-abm-tipo-prod {
+    padding: 1rem;
+    text-align: center;
+}
+
+.img-btn-add-tipo-producto {
+    width: 30px;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+    left: -203px;
+}
+
+.img-btn-add-tipo-producto:hover {
+    border-radius: 100px;
+    box-shadow: 0 0 10px black;
 }
