--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -263,6 +263,7 @@
     vertical-align: bottom;
     position: relative;
     top: -5px;
+    left: 0px;
 }
 
 .img-btn-edit-producto:hover {
@@ -270,7 +271,28 @@
     background-color: black;
 }
 
-.img-btn-edit-url-imagen{
+.ddl-campo-filtro-abm-producto {
+    width: 200px;
+    position: relative;
+    top: 0px;
+    left: 302px;
+}
+
+.txt-campo-filtro-abm-producto{
+    width: 200px;
+    position: relative;
+    left: 303px;
+    height: 27px;
+}
+
+.btn-buscar-filtro-abm-producto{
+    height: 27px;
+    position: relative;
+    top: 1px;
+    left: 305px;
+}
+
+.img-btn-edit-url-imagen {
     position: relative;
     top: -58px;
     left: 270px;
@@ -463,10 +485,10 @@
     left: 69px;
 }
 
-    .img-btn-edit-tipo-producto:hover {
-        box-shadow: 0 0 10px black;
-        background-color: black;
-    }
+.img-btn-edit-tipo-producto:hover {
+    box-shadow: 0 0 10px black;
+    background-color: black;
+}
 
 .dgv-abm-tipo-prod {
     padding: 1rem;
