--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -132,7 +132,7 @@
     padding: 5px 0px 10px 0px;
     border-radius: 25px;
     box-shadow: 0px 0px 20px 1px #000000;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 480px) {
@@ -743,7 +743,7 @@
 
 .overlay {
     background: rgba(0,0,0,.3);
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
@@ -790,4 +790,14 @@
 .btn-confirmar-turno-1:hover {
     background-color: #ffffff;
     color: #98D983;
+}
+
+.ttl-registro {
+    text-align: center;
+    background-color: #142382 !important;
+    color: #FFFFFF;
+    padding: 5px 0px 10px 0px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 20px 1px #000000;
+    margin-top: 10px;
 }
