--- a/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
+++ b/TPC_GROSS_LAINO_CHAPARRO/css/estilos.css
@@ -821,3 +821,25 @@
     background-color: #ffffff;
     color: #fc0000;
 }
+
+.btn-export-excel {
+    border-radius: 50px;
+    border: solid 1px;
+    color: #ffffff;
+    background-color: #9fcecc;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    padding-inline: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: 600;
+    text-shadow: black 0.1em 0.1em 1.9em;
+    box-shadow: 0 4px 6px -6px black;
+    margin-bottom: 30px;
+    width: 212px;
+}
+
+.btn-export-excel:hover {
+    color: #9fcecc;
+    background-color: #ffffff;
+}
